# crucible

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AI_INTERVIEW_PREP.md  ARCHITECTURE.md  BUG_PREVENTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FACADE_AUDIT.md  GOAL_LOOP_DEMO_DEPLOY_HANDOFF.md  GOAL_LOOP_HANDOFF.md  HANDOFF.md  LICENSE  NOTICE  QA_ADVERSARY.md  README.md  README.md.bak  RED_ADMISSIBILITY.md  REMAINING_WORK.md  REMOVED_UI.md  RESUME_PROMPT.md  ROADMAP.md  RUN_REPORT.md  SECURITY.md  TEAM.md  THIRD_PARTY.md  UI_RESYNC_GOAL_LOOP.md  acceptance-tests.md  alembic.ini  coding-practices.md  compose.yaml  conftest.py  constitution.md  docker-compose.yml  package-lock.json  package.json  (+8 more)
.githooks/: pre-commit
.github/workflows/: ci-llm-weekly.yml  ci.yml  crucible-ci.yml  deploy.yml
_design_bundle/: AUTOBUILD_BLOCKED.md  AUTOBUILD_LOG.md  README.md  _slices.json
_design_bundle/_slice_messages/: slice-01-iter-01.js  slice-01-iter-01.txt
_design_bundle/slice-01-run-launcher/: CONVERGED_AT_CAP.md  IN_PROGRESS.md  v1.html  v1.meta.json  v2.html  v2.meta.json  v3.html  v3.meta.json  v4.html  v4.meta.json
_design_bundle/slice-02-live-run-view/: IN_PROGRESS.md  v1.html  v1.meta.json  v2.html  v2.meta.json  v3.html  v3.meta.json  v4.html  v4.meta.json
alembic/: env.py
alembic/versions/: a1c0de9a2b10_add_produced_output_to_transactions.py  b2e1f7c4d9a3_add_cancel_requested_to_runs.py  d80229e5a45c_baseline_schema.py
artifacts/: code_agent_e2e_summary.json  e2e_run_summary.json  fraud-v1.lgb  fraud-v1.meta.json  fraud-v2 2.lgb  fraud-v2.meta 2.json  fraud-v2.meta.json
crucible/: __init__.py  __main__.py  adapter_scaffold.py  artifacts.py  catalog.py  cli.py  cowork.py  demo_observer.py  doctor.py  eligibility.py  evals.py  focus.py  local_db.py  replay.py  report.py  runner.py  runtime.py  specs.py  status.py  suitability.py
crucible/tests/: test_install_skill_modes.py  test_skill_describes_cli.py  test_wheel_inclusion_and_subcommands.py
dashboard/: .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
dashboard/e2e/: demo.spec.ts
dashboard/src/: api.test.ts  api.ts  index.css  main.tsx  theme.ts
demo/: .gitignore  BUGLOG.md  CRITIQUE.md  SLACK_DRAFT.md  flow_drive.mjs  make_card.py  mux.sh  narrate.sh  recorder.mjs  stitch.sh
demo/integrity/: deploy-us10-dashboard.api.json  deploy-us11-corpus.api.json  deploy-us11-corpus.rendered.txt  deploy-us12-report.api.json  deploy-us13-halt.api.json  deploy-us13-halt.rendered.txt  deploy-us14-whitebox.api.json  deploy-us14-whitebox.rendered.txt  deploy-us15-admin.rendered.txt  deploy-us2-round.rendered.txt  deploy-us4-oracles.api.json  deploy-us4-oracles.health.json  deploy-us4-oracles.rendered.txt  deploy-us5-replay.rendered.txt  deploy-us6-catalog.api.json  deploy-us7-blue.api.json  deploy-us8-health.api.json  deploy-us8-health.rendered.txt  deploy-us9-sandbox.api.json  deploy-us9-sandbox.rendered.txt  explore-configure.api.json  explore-results.api.json  flow_drive.result.json  flow_drive.txt  local-us1-submit.api.json  local-us1-submit.rendered.txt  local-us10-dashboard.api.json  local-us11-corpus.api.json  local-us11-corpus.rendered.txt  local-us12-report.rendered.txt  local-us15-admin.api.json  local-us15-admin.rendered.txt  local-us2-round.api.json  (+8 more)
deploy/: crucible-integrity.service
design/: claude-design-brief.md
docs/: AGENT_LOOP_CHECKLIST.md  CLAUDE_DESIGN_STUB_PROTOCOL.md  CROSS_MODEL_DIFFERENTIAL.md  DEFENSE_BREAKOUT_SCRIPT.md  DEMO.md  DEMO_RUNSHEET.md  DEMO_SCRIPT.md  DEPLOY.md  DESIGN.md  GOAL_LOOP.md  ISSUES.md  PLAN.md  PLAN_AI_AGENT_TESTING.md  PRD.md  REALITY-CHECK.md  SLASH_COMMAND_GOAL_LOOP.md  SOURCES.md  STUB_PROTOCOL.md  VOCABULARY.md  ci-workflow.yml.txt
frontend/: Canvas.dc.html  Crucible Design System.dc.html  README.md  Run Launcher.dc.html  Run Launcher.html  STUB_PROTOCOL.md  _palette_notes.md  app.js  index.html  live 2.js  live.js  slice-01-run-launcher.dc.html  slice-01-strategy-catalog.dc.html  slice-02-live-run-view.dc.html  slice-02-whitebox-selftest.dc.html  slice-03-blue-patch-review.dc.html  slice-03-verdict-detail.dc.html  slice-04-dashboard.dc.html  slice-04-honest-dashboard.dc.html  slice-05-audit-row-replayer.dc.html  slice-05-coevolution-curves.dc.html  slice-06-halt-certification.dc.html  slice-06-strategy-catalog.dc.html  slice-07-blue-patch-review.dc.html  slice-07-leaderboard-export.dc.html  slice-08-halt-certification.dc.html  slice-08-sr-117-report.dc.html  slice-09-admin-debug.dc.html  slice-09-coevolution-curves.dc.html  slice-10-admin-llm.dc.html  slice-10-whitebox-selftest.dc.html  slice-11-health.dc.html  slice-12-admin-debug.dc.html  slice-13-leaderboard-export.dc.html  slice-14-sr-117-report.dc.html  slice-15-workspace-policy.dc.html  slice-16-spec-history.dc.html
migrations/: env.py
modules/: __init__.py
orchestrator/: __init__.py  api.py  cli.py  code_red_run.py  db.py  errors.py  full_run.py  import_audit.py  loop.py  persisting_llm.py  stream.py  targets_registry.py  test_wiring.py  wiring.py  worker.py
scripts/: _claude_design_stub_contract.py  _stub_contract.py  audit_claude_design_stubs.py  audit_stubs.py  build_crucible_svg.py  build_crucible_svg.py.bak  capture_demo.py  check_module_imports.py  demo_env.sh  demo_screenshots.py  dump_demo_fixture.py  fetch_fraud_dataset.py  run_e2e_code_agent.py  run_e2e_real_llms.py  seed_demo.py  strip_claude_design_stubs.py  strip_design_stubs.py
seed/: crucible_demo.json
shared/: __init__.py  config.py  env.py  model_family.py  refusal.py  source.py  test_env.py
skills/: __init__.py
specs/: fraud_v0.yaml
tests/: conftest.py  test_attacks.py  test_audit.py  test_browser.py  test_calibration.py  test_catalog.py  test_config.py  test_end_to_end.py  test_fix_eval.py  test_http_adapter.py  test_live_openrouter.py  test_llm.py  test_llm_attacker.py  test_mcp.py  test_multiturn.py  test_oracles.py  test_search.py  test_targets_and_cli.py  test_tool_target.py  test_value_objects.py  test_verify.py
website/: index.html
(+507 files in other folders)
