[project]
name = "crucible"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.69",
  "python-dotenv>=1.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  # Sync Postgres driver for the loop-safe ``llm_calls`` writer
  # (``shared/llm/persisting.py``): the write must NOT cross the async asyncpg
  # engine's event loop, so it goes through a blocking ``postgresql+psycopg`` engine.
  "psycopg[binary]>=3.1",
  "aiosqlite>=0.20",
  "pydantic>=2.6",
  "structlog>=24.1",
  "pyyaml>=6",
  "scikit-learn>=1.4",
  "lightgbm>=4.0",
  "joblib>=1.3",
  "pandas>=2.0",
  "hypothesis>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4", "mypy>=1.10", "coverage>=7.5", "types-PyYAML"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "modules", "shared", "orchestrator"]
markers = [
  "docker: integration tests that require a running Docker daemon",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# alembic/ is generated migration scaffolding (Alembic's own template style);
# we do not lint it. Our code stays fully linted.
extend-exclude = ["scratchpad", ".venv", "alembic"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
# alembic/ holds generated migrations + the env.py template; excluded from
# --strict so its scaffolding does not gate our own typed code.
exclude = ["scratchpad/", "\\.venv/", "alembic/"]

# Untyped third-party libs (no stubs / py.typed). Scoped overrides keep
# --strict in force for our own code while tolerating missing stubs here.
[[tool.mypy.overrides]]
module = ["joblib.*", "sklearn.*", "lightgbm.*", "pandas.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared", "orchestrator", "modules"]
